--- a/package.json
+++ b/package.json
@@ -112,8 +112,10 @@
     "moment": "^2.29.4",
     "quill-image-uploader": "^1.2.3",
     "react-ga4": "^1.4.1",
+    "react-html-parser": "^2.0.2",
     "react-quill": "^2.0.0",
     "toformat": "^2.0.0",
-    "web3": "^1.7.4"
+    "web3": "^1.7.4",
+    "xss": "^1.0.14"
   }
 }
