--- a/.env
+++ b/.env
@@ -1,5 +1,5 @@
-REACT_APP_CHAIN_ID="4"
-REACT_APP_NETWORK_URL="https://rinkeby.infura.io/v3/169a2f10743f4afdaa0a17e148552867"
-REACT_APP_CHAIN_IDS="4, 80001"
+REACT_APP_CHAIN_ID="5"
+REACT_APP_NETWORK_URL="https://goerli.infura.io/v3/169a2f10743f4afdaa0a17e148552867"
+REACT_APP_CHAIN_IDS="5, 80001"
 
 SKIP_PREFLIGHT_CHECK=true
