--- a/.env.production
+++ b/.env.production
@@ -1,5 +1,5 @@
-REACT_APP_CHAIN_ID="4"
-REACT_APP_NETWORK_URL="https://rinkeby.infura.io/v3/169a2f10743f4afdaa0a17e148552867"
+REACT_APP_CHAIN_ID="5"
+REACT_APP_NETWORK_URL="https://goerli.infura.io/v3/169a2f10743f4afdaa0a17e148552867"
+REACT_APP_CHAIN_IDS="5, 80001"
 REACT_APP_PORTIS_ID="c0e2bf01-4b08-4fd5-ac7b-8e26b58cd236"
 REACT_APP_FORTMATIC_KEY="pk_live_F937DF033A1666BF"
-REACT_APP_CHAIN_IDS="4, 80001"
