build: Security configuration

--- a/netlify.toml
+++ b/netlify.toml
@@ -25,3 +25,16 @@
   from = "/*"
   to = "/index.html"
   status = 200
+
+[[headers]]
+  for = "/*"
+  [headers.values]
+    X-Frame-Options = "DENY"
+    X-XSS-Protection = "1; mode=block"
+
+    #  Multi-value headers are expressed with multi-line strings
+	  #  cache-control = '''
+	  #  max-age=0,
+	  #  no-cache,
+	  #  no-store,
+	  #  must-revalidate'''
