--- a/netlify.toml
+++ b/netlify.toml
@@ -19,13 +19,6 @@
 [context.deploy-preview]
   publish = "build/"
 
-# The following redirect is intended for use with most SPAs
-# that handle routing internally.
-[[redirects]]
-  from = "/*"
-  to = "/index.html"
-  status = 200
-
 [[headers]]
   for = "/*"
   [headers.values]
@@ -39,3 +32,15 @@
 	  #  no-cache,
 	  #  no-store,
 	  #  must-revalidate'''
+
+# The following redirect is intended for use with most SPAs
+# that handle routing internally.
+[[redirects]]
+  from = "/*"
+  to = "/index.html"
+  status = 200
+  headers = {
+    X-Frame-Options = "DENY"
+    X-XSS-Protection = "1; mode=block"
+    Content-Security-Policy = "script-src 'self' 'unsafe-inline' 'unsafe-eval' https://*.myclique.io/ http://*.myclique.io/ https://www.googletagmanager.com https://www.google-analytics.com; frame-src 'self'; child-src 'self'; frame-ancestors 'self'; img-src 'self' http://*.myclique.io/ https://*.myclique.io/ https://assets.coingecko.com/"
+  }
