--- a/netlify.toml
+++ b/netlify.toml
@@ -40,7 +40,7 @@
   to = "/index.html"
   status = 200
   headers = {
-    X-Frame-Options = "DENY"
-    X-XSS-Protection = "1; mode=block"
+    X-Frame-Options = "DENY",
+    X-XSS-Protection = "1; mode=block",
     Content-Security-Policy = "script-src 'self' 'unsafe-inline' 'unsafe-eval' https://*.myclique.io/ http://*.myclique.io/ https://www.googletagmanager.com https://www.google-analytics.com; frame-src 'self'; child-src 'self'; frame-ancestors 'self'; img-src 'self' http://*.myclique.io/ https://*.myclique.io/ https://assets.coingecko.com/"
   }
