feat: add airdrop

--- a/.env
+++ b/.env
@@ -3,5 +3,7 @@ REACT_APP_NETWORK_URL="https://goerli.infura.io/v3/169a2f10743f4afdaa0a17e148552
 REACT_APP_CHAIN_IDS="5, 80001"
 REACT_APP_GOERLI_DAO_FACTORY_ADDRESS="0x93e7A03239d62CC24D84A7A216E81FB2aDbC7D9b"
 REACT_APP_POLYGON_MUMBAI_DAO_FACTORY_ADDRESS="0x18Be998c31815d1C3d1dde881801112D9ee81532"
+REACT_APP_GOERLI_AIRDROP_ADDRESS="0x4a9e8EeBd7e3d928E494A3ef43baD56838FB2Bf3"
+REACT_APP_POLYGON_MUMBAI_AIRDROP_ADDRESS="0x83D32D4618A8798112B0F6390b558761B8881348"
 SKIP_PREFLIGHT_CHECK=true
 REACT_APP_SERVER_BASE_URL="https://devapiv2.myclique.io/"
