fix: add mainnet

--- a/.env.pre.production
+++ b/.env.pre.production
@@ -1,5 +1,5 @@
 REACT_APP_CHAIN_ID="1"
-REACT_APP_NETWORK_URL="https://infura.io/v3/169a2f10743f4afdaa0a17e148552867"
+REACT_APP_NETWORK_URL="https://mainnet.infura.io/v3/169a2f10743f4afdaa0a17e148552867"
 REACT_APP_CHAIN_IDS="1, 137"
 REACT_APP_ETH_DAO_FACTORY_ADDRESS="0xD7a52a2Fe72A588351600Fa2feDD6132381f065d"
 REACT_APP_POLYGON_DAO_FACTORY_ADDRESS="0xa2d34aA709De897Ef62ee08274EC6e2c451a1CdC"
