fix: fix REACT_APP_SERVER_BASE_URL

--- a/.env.test.production
+++ b/.env.test.production
@@ -6,4 +6,4 @@ REACT_APP_POLYGON_MUMBAI_DAO_FACTORY_ADDRESS="0x18Be998c31815d1C3d1dde881801112D
 REACT_APP_GOERLI_AIRDROP_ADDRESS="0x4a9e8EeBd7e3d928E494A3ef43baD56838FB2Bf3"
 REACT_APP_POLYGON_MUMBAI_AIRDROP_ADDRESS="0x83D32D4618A8798112B0F6390b558761B8881348"
 SKIP_PREFLIGHT_CHECK=true
-REACT_APP_SERVER_BASE_URL="https://devapiv2.myclique.io/"
+REACT_APP_SERVER_BASE_URL="https://testapiv2.myclique.io/"
