--- a/.env.pre.production
+++ b/.env.pre.production
@@ -7,4 +7,5 @@ REACT_APP_ETH_AIRDROP_ADDRESS="0x1EFB2Cb5015FDd13120dF72BB152c8Ec91bCD68e"
 REACT_APP_POLYGON_AIRDROP_ADDRESS="0x9fBa77AA2957b2C47c0B80e14fdf7e7d28eDd127"
 REACT_APP_PORTIS_ID="c0e2bf01-4b08-4fd5-ac7b-8e26b58cd236"
 REACT_APP_FORTMATIC_KEY="pk_live_F937DF033A1666BF"
-REACT_APP_SERVER_BASE_URL="https://preapiv2.myclique.io/"
+#REACT_APP_SERVER_BASE_URL="https://preapiv2.myclique.io/"
+REACT_APP_SERVER_BASE_URL="https://apiv2.myclique.io/"
