feat: hide all contract

--- a/.env.pre.production
+++ b/.env.pre.production
@@ -1,14 +1,14 @@
 REACT_APP_CHAIN_ID="1"
 REACT_APP_NETWORK_URL="https://rpc.ankr.com/eth"
 REACT_APP_CHAIN_IDS="1, 137, 8217, 56"
-REACT_APP_ETH_DAO_FACTORY_ADDRESS="0xD7a52a2Fe72A588351600Fa2feDD6132381f065d"
-REACT_APP_POLYGON_DAO_FACTORY_ADDRESS="0xa2d34aA709De897Ef62ee08274EC6e2c451a1CdC"
-REACT_APP_KLAYTN_DAO_FACTORY_ADDRESS="0x67dd666da5c03eC1Cf2faACa45064e793648ecA3"
-REACT_APP_BSC_DAO_FACTORY_ADDRESS="0xd56a88fDE1861297A32416e86Fc6f3347A1677bc"
-REACT_APP_ETH_AIRDROP_ADDRESS="0x1EFB2Cb5015FDd13120dF72BB152c8Ec91bCD68e"
-REACT_APP_POLYGON_AIRDROP_ADDRESS="0x9fBa77AA2957b2C47c0B80e14fdf7e7d28eDd127"
-REACT_APP_KLAYTN_AIRDROP_ADDRESS="0x3ba0116d115CC419B5cda1c2b59D402AF8D4056b"
-REACT_APP_BSC_AIRDROP_ADDRESS="0x26E3a7841682D65e7a11e3C82067CeA0BbFC6aB4"
+#REACT_APP_ETH_DAO_FACTORY_ADDRESS="0xD7a52a2Fe72A588351600Fa2feDD6132381f065d"
+#REACT_APP_POLYGON_DAO_FACTORY_ADDRESS="0xa2d34aA709De897Ef62ee08274EC6e2c451a1CdC"
+#REACT_APP_KLAYTN_DAO_FACTORY_ADDRESS="0x67dd666da5c03eC1Cf2faACa45064e793648ecA3"
+#REACT_APP_BSC_DAO_FACTORY_ADDRESS="0xd56a88fDE1861297A32416e86Fc6f3347A1677bc"
+#REACT_APP_ETH_AIRDROP_ADDRESS="0x1EFB2Cb5015FDd13120dF72BB152c8Ec91bCD68e"
+#REACT_APP_POLYGON_AIRDROP_ADDRESS="0x9fBa77AA2957b2C47c0B80e14fdf7e7d28eDd127"
+#REACT_APP_KLAYTN_AIRDROP_ADDRESS="0x3ba0116d115CC419B5cda1c2b59D402AF8D4056b"
+#REACT_APP_BSC_AIRDROP_ADDRESS="0x26E3a7841682D65e7a11e3C82067CeA0BbFC6aB4"
 REACT_APP_PORTIS_ID="c0e2bf01-4b08-4fd5-ac7b-8e26b58cd236"
 REACT_APP_FORTMATIC_KEY="pk_live_F937DF033A1666BF"
 REACT_APP_SERVER_BASE_URL="https://apiv2.myclique.io/"
