--- a/.env.pre.production
+++ b/.env.pre.production
@@ -11,6 +11,5 @@ REACT_APP_CHAIN_IDS="1, 137, 8217, 56"
 #REACT_APP_BSC_AIRDROP_ADDRESS="0x26E3a7841682D65e7a11e3C82067CeA0BbFC6aB4"
 REACT_APP_PORTIS_ID="c0e2bf01-4b08-4fd5-ac7b-8e26b58cd236"
 REACT_APP_FORTMATIC_KEY="pk_live_F937DF033A1666BF"
-REACT_APP_SERVER_BASE_URL="https://apiv2.myclique.io/"
-#REACT_APP_SERVER_BASE_URL="https://preapiv2.myclique.io/"
+REACT_APP_SERVER_BASE_URL="https://preapiv2.myclique.io/"
 #REACT_APP_SERVER_BASE_URL="https://apiv2.myclique.io/"
