--- a/.env.production
+++ b/.env.production
@@ -1,6 +1,6 @@
 REACT_APP_CHAIN_ID="1"
 REACT_APP_NETWORK_URL="https://rpc.ankr.com/eth"
-REACT_APP_CHAIN_IDS="1, 137, 8217"
+REACT_APP_CHAIN_IDS="1, 137, 8217, 56"
 REACT_APP_ETH_DAO_FACTORY_ADDRESS="0xD7a52a2Fe72A588351600Fa2feDD6132381f065d"
 REACT_APP_POLYGON_DAO_FACTORY_ADDRESS="0xa2d34aA709De897Ef62ee08274EC6e2c451a1CdC"
 REACT_APP_KLAYTN_DAO_FACTORY_ADDRESS="0x67dd666da5c03eC1Cf2faACa45064e793648ecA3"
