feat: update manifest

--- a/public/manifest.json
+++ b/public/manifest.json
@@ -1,7 +1,7 @@
 {
   "background_color": "#fff",
   "display": "standalone",
-  "homepage_url": "https://google.com/",
+  "homepage_url": "https://www.myclique.io/",
   "icons": [
     {
       "src": "./images/196x196_App_Icon.png",
