feat: add or update GOOGLE_ANALYTICS

--- a/.env.production
+++ b/.env.production
@@ -12,4 +12,4 @@ REACT_APP_BSC_AIRDROP_ADDRESS="0x26E3a7841682D65e7a11e3C82067CeA0BbFC6aB4"
 REACT_APP_PORTIS_ID="c0e2bf01-4b08-4fd5-ac7b-8e26b58cd236"
 REACT_APP_FORTMATIC_KEY="pk_live_F937DF033A1666BF"
 REACT_APP_SERVER_BASE_URL="https://apiv2.myclique.io/"
-REACT_APP_GOOGLE_ANALYTICS_ID="G-1C6047VPZG"
+REACT_APP_GOOGLE_ANALYTICS_ID="G-PGKWZGKGVF"
