--- a/public/manifest.json
+++ b/public/manifest.json
@@ -17,7 +17,7 @@
     }
   ],
   "orientation": "portrait",
-  "name": "title",
+  "name": "myclique",
   "short_name": "title",
   "start_url": ".",
   "theme_color": "#7869CC"
