build: update test env

--- a/.env.test.production
+++ b/.env.test.production
@@ -1,9 +1,16 @@
 REACT_APP_CHAIN_ID="5"
 REACT_APP_NETWORK_URL="https://goerli.infura.io/v3/169a2f10743f4afdaa0a17e148552867"
-REACT_APP_CHAIN_IDS="5, 80001"
+REACT_APP_CHAIN_IDS="5, 80001, 1001, 97, 84531"
 REACT_APP_GOERLI_DAO_FACTORY_ADDRESS="0x93e7A03239d62CC24D84A7A216E81FB2aDbC7D9b"
 REACT_APP_POLYGON_MUMBAI_DAO_FACTORY_ADDRESS="0x18Be998c31815d1C3d1dde881801112D9ee81532"
+REACT_APP_KLAYTN_BAOBAB_DAO_FACTORY_ADDRESS="0x9fE8096d3C4D3cCb5E5537fa7761CdBb377d45bC"
+REACT_APP_BSC_TESTNET_DAO_FACTORY_ADDRESS="0xb6AE25DD2A30E4670077f0e177530bBC0921d7BA"
+REACT_APP_POLYGON_ZKEVM_TESTNET_DAO_FACTORY_ADDRESS="0x7D1d608630F311ebBa6bb56AA3Ac4ef8e0F52dD8"
+REACT_APP_COINBASE_TESTNET_DAO_FACTORY_ADDRESS="0x25B084FC1de433D2EA72d8F0E7949f4ea040a69f"
 REACT_APP_GOERLI_AIRDROP_ADDRESS="0x4a9e8EeBd7e3d928E494A3ef43baD56838FB2Bf3"
 REACT_APP_POLYGON_MUMBAI_AIRDROP_ADDRESS="0x83D32D4618A8798112B0F6390b558761B8881348"
-SKIP_PREFLIGHT_CHECK=true
+REACT_APP_KLAYTN_BAOBAB_AIRDROP_ADDRESS="0x8b09B9008f3bF5D4F48e0A251a872EB45a4372Dd"
+REACT_APP_BSC_TESTNET_AIRDROP_ADDRESS="0xae96637920430e4D05cCf11Db47cfa5cfC3224B7"
+REACT_APP_POLYGON_ZKEVM_TESTNET_AIRDROP_ADDRESS="0x210B84c4a10EA59EdF05964613161A6cbb7F3837"
+REACT_APP_COINBASE_TESTNET_AIRDROP_ADDRESS="0xE663f23F7326C5fdc884613FC53bC94c65F6C856"
 REACT_APP_SERVER_BASE_URL="https://testapiv2.myclique.io/"
