--- a/.env
+++ b/.env
@@ -13,5 +13,11 @@ REACT_APP_KLAYTN_BAOBAB_AIRDROP_ADDRESS="0x8b09B9008f3bF5D4F48e0A251a872EB45a437
 REACT_APP_BSC_TESTNET_AIRDROP_ADDRESS="0xae96637920430e4D05cCf11Db47cfa5cfC3224B7"
 REACT_APP_POLYGON_ZKEVM_TESTNET_AIRDROP_ADDRESS="0x6d6aFa2C67BE77d440f5cabce62a9AB093B6085A"
 REACT_APP_COINBASE_TESTNET_AIRDROP_ADDRESS="0xE663f23F7326C5fdc884613FC53bC94c65F6C856"
+REACT_APP_GOERLI_PUBLICSALE_ADDRESS="0x626f936D28D758c9566d3EBC3A79491C23EB1015"
+REACT_APP_POLYGON_MUMBAI_PUBLICSALE_ADDRESS="0x83D32D4618A8798112B0F6390b558761B8881348"
+REACT_APP_KLAYTN_BAOBAB_PUBLICSALE_ADDRESS="0x8b09B9008f3bF5D4F48e0A251a872EB45a4372Dd"
+REACT_APP_BSC_TESTNET_PUBLICSALE_ADDRESS="0xae96637920430e4D05cCf11Db47cfa5cfC3224B7"
+REACT_APP_POLYGON_ZKEVM_TESTNET_PUBLICSALE_ADDRESS="0x6d6aFa2C67BE77d440f5cabce62a9AB093B6085A"
+REACT_APP_COINBASE_TESTNET_PUBLICSALE_ADDRESS="0xE663f23F7326C5fdc884613FC53bC94c65F6C856"
 REACT_APP_SERVER_BASE_URL="https://devapiv2.myclique.io/"
 SKIP_PREFLIGHT_CHECK=true
