--- a/.env
+++ b/.env
@@ -1,6 +1,6 @@
 REACT_APP_CHAIN_ID="5"
 REACT_APP_NETWORK_URL="https://goerli.infura.io/v3/169a2f10743f4afdaa0a17e148552867"
-REACT_APP_CHAIN_IDS="5, 80001, 1001, 97, 84531, 1442"
+REACT_APP_CHAIN_IDS="5, 80001, 1001, 97, 84531, 1442, 11155111"
 REACT_APP_GOERLI_DAO_FACTORY_ADDRESS="0x93e7A03239d62CC24D84A7A216E81FB2aDbC7D9b"
 REACT_APP_POLYGON_MUMBAI_DAO_FACTORY_ADDRESS="0x18Be998c31815d1C3d1dde881801112D9ee81532"
 REACT_APP_KLAYTN_BAOBAB_DAO_FACTORY_ADDRESS="0x9fE8096d3C4D3cCb5E5537fa7761CdBb377d45bC"
@@ -14,6 +14,7 @@ REACT_APP_BSC_TESTNET_AIRDROP_ADDRESS="0xae96637920430e4D05cCf11Db47cfa5cfC3224B
 REACT_APP_POLYGON_ZKEVM_TESTNET_AIRDROP_ADDRESS="0x6d6aFa2C67BE77d440f5cabce62a9AB093B6085A"
 REACT_APP_COINBASE_TESTNET_AIRDROP_ADDRESS="0xE663f23F7326C5fdc884613FC53bC94c65F6C856"
 REACT_APP_GOERLI_PUBLICSALE_ADDRESS="0x626f936D28D758c9566d3EBC3A79491C23EB1015"
+REACT_APP_SEPOLIA_PUBLICSALE_ADDRESS="0x8c4591ca2EaeC3698200C76d242782E1aC286c1E"
 REACT_APP_POLYGON_MUMBAI_PUBLICSALE_ADDRESS="0x83D32D4618A8798112B0F6390b558761B8881348"
 REACT_APP_KLAYTN_BAOBAB_PUBLICSALE_ADDRESS="0x8b09B9008f3bF5D4F48e0A251a872EB45a4372Dd"
 REACT_APP_BSC_TESTNET_PUBLICSALE_ADDRESS="0xae96637920430e4D05cCf11Db47cfa5cfC3224B7"
