--- a/package.json
+++ b/package.json
@@ -106,6 +106,8 @@
     "@mui/icons-material": "^5.0.5",
     "@mui/material": "^5.0.6",
     "@mui/x-date-pickers": "^5.0.0-beta.4",
+    "@pushprotocol/restapi": "^0.9.0",
+    "@pushprotocol/uiweb": "^0.5.0",
     "axios": "^0.24.0",
     "big.js": "^6.1.1",
     "date-fns": "^2.29.1",
@@ -119,6 +121,7 @@
     "react-ga4": "^1.4.1",
     "react-html-parser": "^2.0.2",
     "react-quill": "^2.0.0",
+    "styled-components": "^5.3.9",
     "toformat": "^2.0.0",
     "web3": "^1.7.4",
     "xss": "^1.0.14"
