feat: add DragTaskPanel

--- a/package.json
+++ b/package.json
@@ -108,6 +108,7 @@
     "@mui/x-date-pickers": "^5.0.0-beta.4",
     "@pushprotocol/restapi": "^0.9.0",
     "@pushprotocol/uiweb": "^0.5.0",
+    "@types/react-beautiful-dnd": "^13.1.4",
     "axios": "^0.24.0",
     "big.js": "^6.1.1",
     "date-fns": "^2.29.1",
@@ -118,6 +119,7 @@
     "merkletreejs": "^0.2.32",
     "moment": "^2.29.4",
     "quill-image-uploader": "^1.2.3",
+    "react-beautiful-dnd": "^13.1.1",
     "react-ga4": "^1.4.1",
     "react-html-parser": "^2.0.2",
     "react-quill": "^2.0.0",
