--- a/package.json
+++ b/package.json
@@ -104,7 +104,8 @@
     "@emotion/react": "^11.5.0",
     "@emotion/styled": "^11.3.0",
     "@mui/icons-material": "^5.0.5",
-    "@mui/material": "^5.0.6",
+    "@mui/material": "5.2.8",
+    "@mui/x-data-grid": "5.9.0",
     "@mui/x-date-pickers": "^5.0.0-beta.4",
     "@pushprotocol/restapi": "^0.9.0",
     "@pushprotocol/uiweb": "^0.5.0",
