--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "private": true,
   "devDependencies": {
     "@babel/plugin-syntax-typescript": "^7.16.0",
+    "@craco/craco": "6.4.3",
     "@popperjs/core": "^2.10.2",
     "@reach/portal": "^0.16.2",
     "@reduxjs/toolkit": "^1.6.2",
@@ -60,6 +61,7 @@
     "serve": "^12.0.1",
     "start-server-and-test": "^1.14.0",
     "typescript": "^4.1.2",
+    "uglifyjs-webpack-plugin": "^2.2.0",
     "use-count-up": "^3.0.1",
     "workbox-core": "^6.3.0",
     "workbox-expiration": "^6.3.0",
@@ -68,9 +70,9 @@
     "workbox-strategies": "^6.3.0"
   },
   "scripts": {
-    "start": "react-scripts start",
+    "start": "craco start",
     "start:service-worker": "yarn build && yarn serve -s build",
-    "build": "react-scripts build",
+    "build": "CI= craco build",
     "build:pre": "env-cmd -f ./.env.pre.production yarn build",
     "build:test": "env-cmd -f ./.env.test.production yarn build",
     "build:dev": "env-cmd -f ./.env.dev.production yarn build",
