--- a/package.json
+++ b/package.json
@@ -66,7 +66,7 @@
   "scripts": {
     "start": "craco start",
     "start:service-worker": "yarn build && yarn serve -s build",
-    "build": "craco build",
+    "build": "CI= craco build",
     "build:pre": "env-cmd -f ./.env.pre.production yarn build",
     "build:test": "env-cmd -f ./.env.test.production yarn build",
     "build:dev": "env-cmd -f ./.env.dev.production yarn build",
@@ -121,7 +121,7 @@
     "react-html-parser": "^2.0.2",
     "react-markdown": "^8.0.7",
     "react-quill": "^2.0.0",
-    "react-select-material-ui": "^9.2.0",
+    "react-select-material-ui": "^9.0.0",
     "react-toastify": "8.0.0",
     "toformat": "^2.0.0",
     "web3": "^1.7.4",
