--- a/package.json
+++ b/package.json
@@ -54,7 +54,7 @@
     "redux-localstorage-simple": "^2.3.1",
     "serve": "^12.0.1",
     "start-server-and-test": "^1.14.0",
-    "typescript": "^4.1.2",
+    "typescript": "4.9.5",
     "uglifyjs-webpack-plugin": "^2.2.0",
     "use-count-up": "^3.0.1",
     "workbox-core": "^6.3.0",
@@ -99,11 +99,9 @@
     "@emotion/styled": "^11.11.0",
     "@mui/icons-material": "^5.0.5",
     "@mui/lab": "5.0.0-alpha.111",
-    "@mui/material": "^5.13.3",
+    "@mui/material": "5.10.17",
     "@mui/x-data-grid": "5.9.0",
     "@mui/x-date-pickers": "^5.0.0-beta.4",
-    "@pushprotocol/restapi": "^0.9.0",
-    "@pushprotocol/uiweb": "^0.5.0",
     "@types/react-beautiful-dnd": "^13.1.4",
     "axios": "^0.24.0",
     "big.js": "^6.1.1",
@@ -113,7 +111,6 @@
     "emoji-regex": "^10.1.0",
     "formik": "2.2.9",
     "jsbi": "^4.0.0",
-    "merkletreejs": "^0.2.32",
     "moment": "^2.29.4",
     "quill-image-uploader": "^1.2.3",
     "react-beautiful-dnd": "^13.1.1",
@@ -121,7 +118,8 @@
     "react-html-parser": "^2.0.2",
     "react-markdown": "^8.0.7",
     "react-quill": "^2.0.0",
-    "react-select-material-ui": "^9.2.0",
+    "react-select": "^5.7.3",
+    "react-select-material-ui": "8.0.1",
     "react-toastify": "8.0.0",
     "toformat": "^2.0.0",
     "web3": "^1.7.4",
