--- a/package.json
+++ b/package.json
@@ -119,7 +119,7 @@
     "react-markdown": "^8.0.7",
     "react-quill": "^2.0.0",
     "react-select": "^5.7.3",
-    "react-select-material-ui": "8.0.1",
+    "react-select-material-ui": "^9.2.0",
     "react-toastify": "8.0.0",
     "toformat": "^2.0.0",
     "web3": "^1.7.4",
