update：server url

--- a/.env.pre.production
+++ b/.env.pre.production
@@ -12,5 +12,5 @@ REACT_APP_BSC_AIRDROP_ADDRESS="0x2AC73343B61ec8C0301aebB39514d1cD12f9013A"
 REACT_APP_BSC_SBT_FACTORY_ADDRESS="0xc06BD869f4Fb34c677A5d41b8A33F8B680D8F6cE"
 REACT_APP_PORTIS_ID="c0e2bf01-4b08-4fd5-ac7b-8e26b58cd236"
 REACT_APP_FORTMATIC_KEY="pk_live_F937DF033A1666BF"
-REACT_APP_SERVER_BASE_URL="https://pre-main.myclique.gq/"
+REACT_APP_SERVER_BASE_URL="https://pre-apiv3.myclique.gq"
 #REACT_APP_SERVER_BASE_URL="https://apiv2.myclique.io/"
