--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -26,12 +26,15 @@
     "plugin:react/recommended",
     "plugin:@typescript-eslint/recommended",
     "plugin:react-hooks/recommended",
-    "prettier/@typescript-eslint",
     "plugin:prettier/recommended"
   ],
   "rules": {
     "@typescript-eslint/explicit-function-return-type": "off",
-    "prettier/prettier": "error",
+    "prettier/prettier":[ "error", {},
+      {
+        "usePrettierrc": true,
+        "arrowParens": "avoid"
+      }],
     "@typescript-eslint/no-explicit-any": "off",
     "@typescript-eslint/no-empty-function": "off",
     "react/jsx-uses-react": "off",
