feat: upgrade_wallet

--- a/.env.test.production
+++ b/.env.test.production
@@ -1,6 +1,7 @@
 REACT_APP_CHAIN_ID="5"
 REACT_APP_NETWORK_URL="https://goerli.infura.io/v3/169a2f10743f4afdaa0a17e148552867"
 REACT_APP_CHAIN_IDS="5, 80001, 1001, 97, 84531, 1442"
+REACT_APP_WALLET_CONNECT_PROJECT_ID=""
 REACT_APP_GOERLI_DAO_FACTORY_ADDRESS="0x93e7A03239d62CC24D84A7A216E81FB2aDbC7D9b"
 REACT_APP_POLYGON_MUMBAI_DAO_FACTORY_ADDRESS="0x18Be998c31815d1C3d1dde881801112D9ee81532"
 REACT_APP_KLAYTN_BAOBAB_DAO_FACTORY_ADDRESS="0x9fE8096d3C4D3cCb5E5537fa7761CdBb377d45bC"
