--- a/package.json
+++ b/package.json
@@ -111,6 +111,7 @@
     "@mui/material": "5.10.17",
     "@mui/x-data-grid": "5.9.0",
     "@mui/x-date-pickers": "^5.0.0-beta.4",
+    "@tokenbound/sdk": "^0.3.4",
     "@types/react-beautiful-dnd": "^13.1.4",
     "axios": "^0.24.0",
     "big.js": "^6.1.1",
