--- a/.env.dev.production
+++ b/.env.dev.production
@@ -21,5 +21,6 @@ REACT_APP_KLAYTN_BAOBAB_PUBLICSALE_ADDRESS="0x8b09B9008f3bF5D4F48e0A251a872EB45a
 REACT_APP_BSC_TESTNET_PUBLICSALE_ADDRESS="0xae96637920430e4D05cCf11Db47cfa5cfC3224B7"
 REACT_APP_POLYGON_ZKEVM_TESTNET_PUBLICSALE_ADDRESS="0x6d6aFa2C67BE77d440f5cabce62a9AB093B6085A"
 REACT_APP_COINBASE_TESTNET_PUBLICSALE_ADDRESS="0xE663f23F7326C5fdc884613FC53bC94c65F6C856"
+REACT_APP_ETH_SBT_FACTORY_ADDRESS="0x6053856cfCcB9fcB43d57b05Cd7a3709bae3fc95"
 REACT_APP_SERVER_BASE_URL="https://dev-apiv3.myclique.gq/"
 SKIP_PREFLIGHT_CHECK=true
