--- a/.env.pre.production
+++ b/.env.pre.production
@@ -11,6 +11,7 @@ REACT_APP_BSC_DAO_FACTORY_ADDRESS="0x5bf53eAFd960AE3Cced46D2B7B1b8555334dBeF0"
 #REACT_APP_KLAYTN_AIRDROP_ADDRESS="0x3ba0116d115CC419B5cda1c2b59D402AF8D4056b"
 REACT_APP_BSC_AIRDROP_ADDRESS="0x2AC73343B61ec8C0301aebB39514d1cD12f9013A"
 REACT_APP_BSC_SBT_FACTORY_ADDRESS="0xc06BD869f4Fb34c677A5d41b8A33F8B680D8F6cE"
+REACT_APP_ETH_SBT_FACTORY_ADDRESS="0x21AD787Fb35d30293F6F9F83Ebf61Ab50f800275"
 REACT_APP_PORTIS_ID="c0e2bf01-4b08-4fd5-ac7b-8e26b58cd236"
 REACT_APP_FORTMATIC_KEY="pk_live_F937DF033A1666BF"
 REACT_APP_SERVER_BASE_URL="https://pre-apiv3.myclique.gq/"
