--- a/.env.production
+++ b/.env.production
@@ -7,6 +7,7 @@ REACT_APP_POLYGON_DAO_FACTORY_ADDRESS="0xa2d34aA709De897Ef62ee08274EC6e2c451a1Cd
 REACT_APP_KLAYTN_DAO_FACTORY_ADDRESS="0x67dd666da5c03eC1Cf2faACa45064e793648ecA3"
 REACT_APP_BSC_DAO_FACTORY_ADDRESS="0xd56a88fDE1861297A32416e86Fc6f3347A1677bc"
 REACT_APP_BSC_SBT_FACTORY_ADDRESS="0xd2C08C822855396b8ECC86b6243BD02f9e6748F6"
+REACT_APP_ETH_SBT_FACTORY_ADDRESS="0x6053856cfCcB9fcB43d57b05Cd7a3709bae3fc95"
 REACT_APP_ETH_AIRDROP_ADDRESS="0x1EFB2Cb5015FDd13120dF72BB152c8Ec91bCD68e"
 REACT_APP_POLYGON_AIRDROP_ADDRESS="0x9fBa77AA2957b2C47c0B80e14fdf7e7d28eDd127"
 REACT_APP_KLAYTN_AIRDROP_ADDRESS="0x3ba0116d115CC419B5cda1c2b59D402AF8D4056b"
