--- a/.env.pre.production
+++ b/.env.pre.production
@@ -1,6 +1,6 @@
-REACT_APP_CHAIN_ID="56"
+REACT_APP_CHAIN_ID="1"
 REACT_APP_NETWORK_URL="https://bsc-dataseed.binance.org"
-REACT_APP_CHAIN_IDS="56, 1, 137"
+REACT_APP_CHAIN_IDS="1, 137"
 REACT_APP_WALLET_CONNECT_PROJECT_ID="878feb10a0c5f4badac76328a9575eab"
 #REACT_APP_ETH_DAO_FACTORY_ADDRESS="0xD7a52a2Fe72A588351600Fa2feDD6132381f065d"
 #REACT_APP_POLYGON_DAO_FACTORY_ADDRESS="0xa2d34aA709De897Ef62ee08274EC6e2c451a1CdC"
