--- a/package.json
+++ b/package.json
@@ -138,6 +138,7 @@
     "react-ga4": "^1.4.1",
     "react-html-parser": "^2.0.2",
     "react-markdown": "^8.0.7",
+    "react-qr-code": "^2.0.12",
     "react-quill": "^2.0.0",
     "react-router-dom": "6.15.0",
     "react-select": "^5.7.3",
